--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,40 +1,108 @@
-/* A4 크기 설정 */
 @page {
     size: A4;
     margin: 0;
 }
-body {
-    width: 210mm;
-    height: 297mm;
-    margin: 0 auto;
-    padding: 20mm;
-    background: white;
+
+.mainbox{
+    width: 700px;
+    padding: 30px;
+    margin: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    background:#eef2f3;
+    border: 5px solid #D7DDE8;
 }
-/* 출력시 배경색 유지 */
-@media print {
-    body {
-        -webkit-print-color-adjust: exact;
-    }
+
+h1{
+    font-family: 'Acme', sans-serif;
+    font-size: 35px;
+    text-align: center;
+    font-weight: bold;
+    margin: 0;
 }
-.resume {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    gap: 20px;
-    height: 100%;
+
+h2{
+    font-family: 'Acme', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    font-weight: lighter;
+    color: #282828;
 }
-.left-section {
-    background-color: #f5f5f5;
-    padding: 20px;
+
+h3{
+    font-family: 'Acme', sans-serif;
+    color: black;
+    text-shadow: 3px 3px 10px #9CECFB;
+    font-size: 17px;
+    border-bottom: 1px solid #D7DDE8;
 }
-.right-section {
-    padding: 20px;
+
+h5{
+    font-size: 12px;
+    text-align: right;
+    font-style: italic;
+    font-weight: lighter;
 }
-.section {
-    margin-bottom: 20px;
+
+.sub-box{
+    margin-right: 15px;
+    margin-left: 15px;
 }
-.photo {
-    width: 120px;
-    height: 160px;
-    margin: 0 auto;
-    display: block;
+.row-container {
+    display: flex;
+    gap: 20px; /* 두 박스 사이의 간격 */
+}
+
+.career-box, .education-box {
+    width: 50%;
+}
+
+
+.nobox{
+    font-family: 'Tapestry', cursive;
+    font-size: 35px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.img{
+    display: inline-block;
+}
+
+.img-box{
+    display: inline-block;
+    border-style:double;
+}
+
+.sns-img{
+    height: 30px;
+    width: 30px;
+}
+
+.font{
+    font-family: 'Acme', sans-serif;
+    margin-left: 20px;
+    font-size: 14px;
+    display: inline-block;
+    vertical-align: top;
+    line-height : 150%;
+}
+
+.text-box{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content:space-between;
+}
+
+.text{
+    font-family: 'Acme', sans-serif;
+    margin-left: 20px;
+    font-size: 14px;
+}
+
+.year-text{
+    font-family: 'Acme', sans-serif;
+    font-size: 14px;
 }
